--- a/Application/package.json
+++ b/Application/package.json
@@ -10,7 +10,9 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "chokidar": "^4.0.3",
     "node-fdkaac": "^1.5.0",
+    "nodejs-whisper": "^0.2.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
     "react-router-dom": "^7.6.2",
