--- a/Application/package.json
+++ b/Application/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tauri-apps/api": "^2.6.0",
     "chokidar": "^4.0.3",
     "node-fdkaac": "^1.5.0",
     "nodejs-whisper": "^0.2.9",
