--- a/Application/package.json
+++ b/Application/package.json
@@ -12,6 +12,7 @@
   "dependencies": {
     "@tauri-apps/api": "^2.6.0",
     "chokidar": "^4.0.3",
+    "ffmpeg-static": "^5.2.0",
     "node-fdkaac": "^1.5.0",
     "nodejs-whisper": "^0.2.9",
     "react": "^19.1.0",
