--- a/Application/package.json
+++ b/Application/package.json
@@ -12,13 +12,12 @@
   "dependencies": {
     "@tauri-apps/api": "^2.6.0",
     "chokidar": "^4.0.3",
-    "ffmpeg-static": "^5.2.0",
+    "mic": "^2.1.2",
     "node-fdkaac": "^1.5.0",
     "nodejs-whisper": "^0.2.9",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-router-dom": "^7.6.2",
-    "speech-recorder": "^2.1.0"
+    "react-router-dom": "^7.6.2"
   },
   "devDependencies": {
     "@eslint/js": "^9.25.0",
